    not running
14. svscan.c: use 'down' file to start or stop service automatically
15. svscan.c: scan immediately instead of SCANINTERVAL on termination of a
    supervised service if SCANNOW env variable is set
- 07/12/2022
16. runpod: run bash in foreground if name is test, devel
17. runpod: added port 8081 for mapping to port 443 on container OS

* Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.0-1.1%{?dist}
Release 1.1.0 Start 27/02/2021 End 08/09/2022
======= Release Highlights ================================================
o svscan: run log supervise process with parent directory as argv2, allow
  supervise processes to run with three arguments
o systemd.override.conf: added systemd override unit file for systems and
  added systemd-time-wait-sync.service in After=
  without battery backed RTC
o supervise.c: indicate service name (instead of just the pid) in logs when
  supervised service exits/crashes
o added RestartSec & PrivateTmp to main unit file and override.conf
o svscan_rc: implemented additional rc commands for FreeBSD
o envdir: ability to link additional directories files for environment
  variables using .envdir, .envfile
o envdir: complete re-code. Added -c option to clear, -i option to ignore
  unreadable files and -w option to treat temporary errors as warning
o openrc script for starting svscan
o alpine linux ready
o supervise: add feature to run ./init once before ./run
o svscan: set SERVICEDIR, PWD environment variable
o svscan: ability to run as PID 1 and reap dead children
o setuidgid: Feature to set additional groups using -g option
o softlimit.c: added -q option for setting message queue size
o svps: added -h option to send HUP to svscan
o svscan: added AUTOSCAN feature (which was actually part of the original
  svscan)
===========================================================================
- 27/02/2021
01. minisvc: added options to set, unset, remove env variables for supervised
    services