@@ -35,6 +35,8 @@ Release 1.1.1 Start 12/09/2022
 - 07/12/2022
 16. runpod: run bash in foreground if name is test, devel
 17. runpod: added port 8081 for mapping to port 443 on container OS
+- 08/12/2022
+18. runpod: fixed setting of arguments passed to docker-entrypoint
 
 * Thu 08 Sep 2022 12:31:45 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.0-1.1%{?dist}
 Release 1.1.0 Start 27/02/2021 End 08/09/2022
